# mlops-sklearn-portfolio

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_legacy.md  copy.md  dir.txt  logs get-log-events \  pyproject.toml
.github/workflows/: ci.yml  push-s3.yml  release-ecr.yml  terraform-apply.yml  terraform-destroy.yml
api/: app.py
docs/: CHANGELOG.md  CHANGELOG_2025-09-28.md  CHANGELOG_2025-10-04.md  api.md  ci.md  docker.md  ops.md  overview.md  replacements.txt  result.md  severe_disaster_manual.md  sh_evidence.md  training.md
docs/evidence/: 2025-09-14_alb_dns.txt  2025-09-14_health.txt  2025-09-20-alb-curl.md  2025-09-21_health.txt  20250922_140959_health.txt  20250927_054140_health.txt  20250928_014728_healthz_200.txt  20250928_015634_healthz_200.txt  20250928_015656_cwlogs_boot.txt  20250928_015656_ecs_update_force_new.txt  20250928_015656_health_200.txt  20250928_015656_healthz_404.txt  20250928_020535_healthz_200_pre_switch.txt  20250928_020553_tg_hc_switch_to_healthz.txt  20250928_020553_tg_health_after_switch.txt  20250928_020611_ecs_events.txt  20250928_020611_healthz_200_final.txt  20250928_020611_metrics_200.txt  20251004_001109_tf_force_unlock.txt  20251004_001131_tf_plan_target_ecs.txt  20251004_003006_tf_plan_target_ecs.txt  20251004_004812_tf_plan_target_ecs.txt  20251004_004948_tf_plan_target_ecs.txt  20251004_005909_tf_plan_target_ecs.txt  20251004_060127_tf_init.txt  20251004_060127_tf_state_list_before.txt  20251004_060127_tf_state_mv_s3.txt  20251004_060250_tf_apply_target_network_ecr.txt  20251004_060250_tf_plan_target_network_ecr.txt  20251004_065459_tf_init_after_refactor.txt  20251004_073744_tf_init_refactor.txt  20251004_074751_tf_outputs_after_network.json  20251004_074903_tf_init_refactor.txt  20251004_074907_tf_outputs_after_network.json  20251004_080600_tf_apply_target_network.txt  20251004_080600_tf_plan_target_network.txt  20251004_080623_tf_apply_target_ecs.txt  (+23 more)
infra/: alb.tf  dev.tfvars  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  providers.tf  s3.tf  variables.tf  versions.tf
infra/00-network/: data.tf  (+3 more)
scripts/: evidence.sh  gen_changelog.py  generate_manifest.py  log_report.py
src/: datasets.py  opt_threshold.py  perm_importance.py  smoke.py  train.py
tests/: test_api_smoke.py  test_perm.py  test_train.py
(+14 files in other folders)
