[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-sklearn-portfolio"
version = "0.1.0"
description = "Tabular ML with scikit-learn: pipeline, CV, FastAPI, and ECS deploy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "user" }]

dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "threadpoolctl>=3.5",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["black>=24.0", "ruff>=0.6", "mypy>=1.10", "pytest>=8", "httpx>=0.27"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"], include = ["*"], exclude = [] } }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "slow: long-running or network-bound tests",
]
